[package]
name = "ntorrent"
version = "0.1.0"
authors = ["Sean Li <seanli646@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.1"
serde_bytes = "0.11.3"
serde = { version = "^1.0.0", features = ["derive"] }
