[package]
name = "ntorrent"
version = "0.1.0"
authors = ["Sean Li <seanli646@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.1"
serde_bytes = "0.11.3"
serde = { version = "^1.0.0", features = ["derive"] }
rand = "0.7.3"
reqwest = "0.10.1"
tokio = { version = "0.2.11", features = ["full"] }
hex = "0.4.2"
sha-1 = "0.8.2"
url = "2.1.1"
